force-app/main/default/objects/Lead/fields/AddressNumber__c.field-meta.xml
<CustomField>
    <fullName>AddressNumber__c</fullName>
    <label>Número</label>
    <length>15</length>
    <type>Text</type>
</CustomField>