force-app/main/default/objects/Lead/fields/CanceledLead__c.field-meta.xml
<CustomField>
    <fullName>CanceledLead__c</fullName>
    <description>Campo criado para ser utilizado em regra de duplicidade para não considerar leads de fibra rural cancelados</description>
    <label>LeadCancelado</label>
    <type>TextArea</type>
</CustomField>