force-app/main/default/objects/Lead/fields/CaseIdBCM__c.field-meta.xml
<CustomField>
    <fullName>CaseIdBCM__c</fullName>
    <description>Armazena o ID do caso criado do sistema BCM</description>
    <inlineHelpText>Informe o ID do Caso criado no sistema BCM</inlineHelpText>
    <label>ID do Caso no BCM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>