force-app/main/default/objects/Lead/fields/ContractURL__c.field-meta.xml
<CustomField>
    <fullName>ContractURL__c</fullName>
    <description>Campo para armazenar a URL do contrato do cliente</description>
    <inlineHelpText>Informe a URL do contrato do cliente criado no sistema Portal de Assinatura</inlineHelpText>
    <label>URL do Contrato</label>
    <type>Url</type>
</CustomField>