force-app/main/default/objects/Lead/fields/CustomerCreditScore__c.field-meta.xml
<CustomField>
    <fullName>CustomerCreditScore__c</fullName>
    <description>Campo para armazenar o score de crédito do cliente</description>
    <inlineHelpText>Informe o score de crédito do cliente</inlineHelpText>
    <label>Score de Crédito Cliente</label>
    <length>15</length>
    <type>Text</type>
</CustomField>