force-app/main/default/objects/Lead/fields/CustomerProducts__c.field-meta.xml
<CustomField>
    <fullName>CustomerProducts__c</fullName>
    <description>Produtos que o cliente possui.</description>
    <label>Produtos do Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BroadBand</fullName>
                <label>Banda Larga</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <label>Móvel</label>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
                <label>Voz</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>