force-app/main/default/objects/Lead/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Bairro relacionado ao endereço do Lead</description>
    <label>Bairro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>