force-app/main/default/objects/Lead/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <description>CPF do Lead</description>
    <label>CPF</label>
    <length>11</length>
    <type>Text</type>
</CustomField>