force-app/main/default/objects/Lead/fields/InterestedProducts__c.field-meta.xml
<CustomField>
    <fullName>InterestedProducts__c</fullName>
    <description>Produtos de interesses do Lead.</description>
    <label>Produto de Interesse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice</fullName>
                <label>Voz</label>
            </value>
            <value>
                <fullName>BL</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <label>Móvel</label>
            </value>
            <value>
                <fullName>Device</fullName>
                <label>Aparelho</label>
            </value>
            <value>
                <fullName>Accessory</fullName>
                <label>Acessório</label>
            </value>
            <value>
                <fullName>Streaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>