force-app/main/default/objects/Lead/fields/MothersName__c.field-meta.xml
<CustomField>
    <fullName>MothersName__c</fullName>
    <description>Nome da mãe do lead.</description>
    <label>Nome da Mãe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>