force-app/main/default/objects/Lead/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <description>Detalhes adicionais do lead.</description>
    <label>Observações</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>