force-app/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Determina o produto ou oferta de interesse para o Lead</description>
    <inlineHelpText>Selecione o produto ou oferta de interesse para o Lead</inlineHelpText>
    <label>Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vivo_Fiber_Rural_Areas_1P_Voice</fullName>
                <label>Vivo Fibra Áreas Rurais 1P Voz</label>
            </value>
            <value>
                <fullName>Vivo_Fiber_Rural_Areas_1P_Broadband</fullName>
                <label>Vivo Fibra Áreas Rurais 1P Banda Larga</label>
            </value>
            <value>
                <fullName>Vivo_Fiber_Rural_Areas_Duo_Broadband_TV</fullName>
                <label>Vivo Fibra Áreas Rurais Duo Banda Larga + TV</label>
            </value>
            <value>
                <fullName>Vivo_Fiber_Rural_Areas_2P</fullName>
                <label>Vivo Fibra Áreas Rurais 2P</label>
            </value>
            <value>
                <fullName>Vivo_Fiber_Rural_Areas_3P</fullName>
                <label>Vivo Fibra Áreas Rurais 3P</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>