force-app/main/default/objects/Lead/fields/PropertyName__c.field-meta.xml
<CustomField>
    <fullName>PropertyName__c</fullName>
    <description>Nome da propriedade (fazenda, chácara, sítio, etc)</description>
    <inlineHelpText>Nome da propriedade (fazenda, chácara, sítio, etc)</inlineHelpText>
    <label>Nome da Propriedade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>