force-app/main/default/objects/Lead/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Ponto de referência próximo de onde se encontra a propriedade</description>
    <label>Ponto de Referência</label>
    <length>100</length>
    <type>Text</type>
</CustomField>