force-app/main/default/objects/Lead/fields/SalesCentralDiscovery__c.field-meta.xml
<CustomField>
    <fullName>SalesCentralDiscovery__c</fullName>
    <description>Pesquisa do televendas.</description>
    <label>Como conheceu a nossa Central de Vendas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0800FromRechargeCard</fullName>
                <label>0800 do Cartão de Recarga</label>
            </value>
            <value>
                <fullName>SearcherGoogle</fullName>
                <label>Buscador (Google)</label>
            </value>
            <value>
                <fullName>CallFrom1058</fullName>
                <label>Chamada do 1058</label>
            </value>
            <value>
                <fullName>NewChip</fullName>
                <label>Chip Novo</label>
            </value>
            <value>
                <fullName>Incentive8486</fullName>
                <label>Incentivo *8486</label>
            </value>
            <value>
                <fullName>Incentive8486Or1058</fullName>
                <label>Incentivo *8486/1058</label>
            </value>
            <value>
                <fullName>FriendsIndication</fullName>
                <label>Indicação Amigos</label>
            </value>
            <value>
                <fullName>IndicationFromStoreOrResaleVivo</fullName>
                <label>Indicação de Loja ou revenda Vivo</label>
            </value>
            <value>
                <fullName>OnlineMediaFacebookYahooEtc</fullName>
                <label>Midia Online (Facebook, Yahoo, Etc)</label>
            </value>
            <value>
                <fullName>VivoWebSiteMyVivoOnlineStore</fullName>
                <label>Site Vivo / Meu Vivo / Loja OnLine</label>
            </value>
            <value>
                <fullName>SMSAfterConsultationBalance</fullName>
                <label>SMS após consulta de SALDO</label>
            </value>
            <value>
                <fullName>SMSAfterCreditRecharge</fullName>
                <label>SMS após Recarga de Créditos</label>
            </value>
            <value>
                <fullName>OfferSMSControlPostPaid</fullName>
                <label>SMS de oferta - Ctrl Pós</label>
            </value>
            <value>
                <fullName>OfferSMSPrePaidControl</fullName>
                <label>SMS de oferta - Pré Ctrl</label>
            </value>
            <value>
                <fullName>OfferSMSControlUp</fullName>
                <label>SMS de oferta - Up Controle</label>
            </value>
            <value>
                <fullName>OfferSMSPostPaidUp</fullName>
                <label>SMS de oferta - Up Pós</label>
            </value>
            <value>
                <fullName>GoogleAdsText</fullName>
                <label>Texto dos anúncios do Google</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>