force-app/main/default/objects/Lead/fields/SalesIdNext__c.field-meta.xml
<CustomField>
    <fullName>SalesIdNext__c</fullName>
    <description>Armazena o ID da venda registrada no sistema Next</description>
    <inlineHelpText>Informe o ID da Venda criada no sistema Next</inlineHelpText>
    <label>ID da Venda no Next</label>
    <length>100</length>
    <type>Text</type>
</CustomField>