force-app/main/default/objects/Lead/fields/SalesType__c.field-meta.xml
<CustomField>
    <fullName>SalesType__c</fullName>
    <label>Tipo de Venda</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
                <label>Migração</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>Donwgrade</fullName>
            </value>
            <value>
                <fullName>Totalization</fullName>
                <label>Totalização</label>
            </value>
            <value>
                <fullName>Portability</fullName>
                <label>Portabilidade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>