force-app/main/default/objects/Lead/fields/SourceChannel__c.field-meta.xml
<CustomField>
    <fullName>SourceChannel__c</fullName>
    <description>Canal de origem do lead.</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de Origem</label>
    <type>Text</type>
</CustomField>