force-app/main/default/objects/Lead/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ScheduleAnotherTime</fullName>
                <label>Agendar Outro Horário</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <label>Agendou</label>
            </value>
            <value>
                <fullName>CardSent</fullName>
                <label>Card Enviado</label>
            </value>
            <value>
                <fullName>LoyalCustomer</fullName>
                <label>Cliente Fidelizado</label>
            </value>
            <value>
                <fullName>ClientDontTrustItsVivo</fullName>
                <label>Cliente Não Confia que é a Vivo</label>
            </value>
            <value>
                <fullName>CustomerDeniesToMakeBiometry</fullName>
                <label>Cliente se Nega a Realizar Biometria</label>
            </value>
            <value>
                <fullName>DecisionMakerDidNotAcceptProposal</fullName>
                <label>Decisor Não Aceitou Proposta</label>
            </value>
            <value>
                <fullName>DecisionMakerIsNotInTheMoment</fullName>
                <label>Decisor não Está no Momento</label>
            </value>
            <value>
                <fullName>DidNotAnswer</fullName>
                <label>Não Atendeu</label>
            </value>
            <value>
                <fullName>NoInterest</fullName>
                <label>Não Tem Interrese</label>
            </value>
            <value>
                <fullName>PreferToGoToTheStore</fullName>
                <label>Prefere Ir Na Loja</label>
            </value>
            <value>
                <fullName>ProposalSent</fullName>
                <label>Proposta Enviada</label>
            </value>
            <value>
                <fullName>NoCoverUp</fullName>
                <label>Sem Cobertura</label>
            </value>
            <value>
                <fullName>OfflineSystem</fullName>
                <label>Sistema Fora do Ar</label>
            </value>
            <value>
                <fullName>WrongNumber</fullName>
                <label>Telefone Incorreto</label>
            </value>
            <value>
                <fullName>ExceededAttempts</fullName>
                <label>Tentativas Excedidas</label>
            </value>
            <value>
                <fullName>ConcludedSale</fullName>
                <label>Venda Concluída</label>
            </value>
            <value>
                <fullName>VivoScore</fullName>
                <label>Vivo Score</label>
            </value>
            <value>
                <fullName>PreSaleAnalysisFR</fullName>
                <label>Análise Pré-Venda</label>
            </value>
            <value>
                <fullName>CreditAnalysisFR</fullName>
                <label>Análise de Crédito</label>
            </value>
            <value>
                <fullName>TicketIssuanceFR</fullName>
                <label>Emissão do Boleto</label>
            </value>
            <value>
                <fullName>WaitingPaymentFR</fullName>
                <label>Aguardando Baixa Pagamento</label>
            </value>
            <value>
                <fullName>BCMOrderShippingFR</fullName>
                <label>Envio Ordem BCM</label>
            </value>
            <value>
                <fullName>IssuanceOfTheContractFR</fullName>
                <label>Emissão do Contrato</label>
            </value>
            <value>
                <fullName>ConclusionAndSaleInNextFR</fullName>
                <label>Conclusão e Venda no Next</label>
            </value>
            <value>
                <fullName>DuplicityFR</fullName>
                <label>Duplicidade</label>
            </value>
            <value>
                <fullName>NoViabilityFR</fullName>
                <label>Sem Viabilidade</label>
            </value>
            <value>
                <fullName>InconsistentDataFR</fullName>
                <label>Dados Inconsistentes</label>
            </value>
            <value>
                <fullName>OnRequestBeforeTheWorkFR</fullName>
                <label>A Pedido - Antes da Obra</label>
            </value>
            <value>
                <fullName>OnRequestAfterTheWorkFR</fullName>
                <label>A Pedido - Depois da Obra</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>