force-app/main/default/objects/Lead/fields/SubStatusDetail__c.field-meta.xml
<CustomField>
    <fullName>SubStatusDetail__c</fullName>
    <description>Campo utilizado para detalhar em alguns casos a situação do sub detalhe, trazendo um maior esclarecimento do andamento do processo de pré-venda</description>
    <label>Detalhe Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UnsuccessfulContactAttemptFR</fullName>
                <label>Tentativa de contato sem sucesso</label>
            </value>
            <value>
                <fullName>InProgressFR</fullName>
                <label>Em andamento</label>
            </value>
            <value>
                <fullName>InCustomerNegotiationFR</fullName>
                <label>Em negociação com o cliente</label>
            </value>
            <value>
                <fullName>TechnicalVisitFeeFR</fullName>
                <label>Taxa de visita técnica</label>
            </value>
            <value>
                <fullName>CancellationFeeFR</fullName>
                <label>Taxa de cancelamento</label>
            </value>
            <value>
                <fullName>NotAcceptTechnicalVisitFeeFR</fullName>
                <label>Não aceitou taxa de visita técnica</label>
            </value>
            <value>
                <fullName>UnapprovedCreditFR</fullName>
                <label>Crédito não aprovado</label>
            </value>
            <value>
                <fullName>CustomerNotAcceptQuoteFR</fullName>
                <label>Cliente não aceitou o orçamento</label>
            </value>
            <value>
                <fullName>ServiceWithdrawalFR</fullName>
                <label>Desistência do serviço</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>