force-app/main/default/objects/Lead/fields/TelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNumber__c</fullName>
    <label>Número de Telefone</label>
    <type>Phone</type>
</CustomField>