force-app/main/default/objects/Lead/recordTypes/FibraRural.recordType-meta.xml
<RecordType>
    <fullName>FibraRural</fullName>
    <active>true</active>
    <businessProcess>LeadsFR</businessProcess>
    <description>Leads para o cenário de venda de Fibra Rural</description>
    <label>Fibra Rural</label>
</RecordType>