force-app/main/default/objects/Lead/recordTypes/Leads.recordType-meta.xml
<RecordType>
    <fullName>Leads</fullName>
    <active>true</active>
    <businessProcess>LeadsJV</businessProcess>
    <description>Leads de abordagem para possiveis clientes</description>
    <label>Leads</label>
</RecordType>