force-app/main/default/objects/Lead/validationRules/BlockChangeIFCancelledFinishedFibraRural.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockChangeIFCancelledFinishedFibraRural</fullName>
    <active>true</active>
    <description>Bloqueia edição no registro de Lead caso esteja com status Cancelado ou Concluído</description>
    <errorConditionFormula>AND
(
RecordType.DeveloperName = &quot;FibraRural&quot;,
NOT ISNEW(),
 OR
 (ISPICKVAL(PRIORVALUE(Status),&apos;FinishedFR&apos;),
  ISPICKVAL(PRIORVALUE(Status),&apos;CancelledFR&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Leads cancelados ou concluídos não podem ser editados!</errorMessage>
</ValidationRule>