force-app/main/default/objects/Lead/validationRules/BlockOwnerChangeFibraRural.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockOwnerChangeFibraRural</fullName>
    <active>true</active>
    <description>Bloqueia a alteração de proprietário caso o usuário não tenha pertença ao papel &quot;Ilha Comercial Fibra Rural&quot;</description>
    <errorConditionFormula>AND 
(
 RecordType.DeveloperName = &quot;FibraRural&quot;,
 ISCHANGED( OwnerId ) ,
 $UserRole.DeveloperName &lt;&gt; &apos;Ilha_Comercial_Fibra_Rural&apos;
)</errorConditionFormula>
    <errorMessage>Usuário não possui permissão de alteração de proprietário para lead de fibra rural.</errorMessage>
</ValidationRule>