force-app/main/default/objects/Lead/validationRules/StatusNovo.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusNovo</fullName>
    <active>true</active>
    <description>Não permitir retornar ao Status Novo para Fibra Rural</description>
    <errorConditionFormula>AND
(
RecordType.DeveloperName = &quot;FibraRural&quot;,
NOT ISNEW(),
(ISPICKVAL(Status,&apos;NewFR&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Não é permitido retornar ao Status Novo após a etapa de verificação de viabilidade.</errorMessage>
</ValidationRule>