force-app/main/default/objects/Lead/validationRules/VerificationMandatoryAgreementURL.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationMandatoryAgreementURL</fullName>
    <active>true</active>
    <description>Permitir ao usuário a tramitação do lead para o status “Concluído” apenas se o campo “URL do Contrato” estiver preenchido</description>
    <errorConditionFormula>AND
(
RecordType.DeveloperName = &quot;FibraRural&quot;,
NOT ISNEW(),
ISBLANK(ContractURL__c),
ISPICKVAL(Status,&apos;FinishedFR&apos;)
)</errorConditionFormula>
    <errorDisplayField>ContractURL__c</errorDisplayField>
    <errorMessage>Para avançar para o Status &apos;Concluído&apos; é necessário informar o campo &apos;URL do Contrato&apos;!</errorMessage>
</ValidationRule>