force-app/main/default/objects/Lead/validationRules/VerificationMandatoryCustomerCreditScore.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationMandatoryCustomerCreditScore</fullName>
    <active>true</active>
    <description>Não permitir a escolha dos Sub Status Emissão do Boleto, Aguardando Baixa Pagamento, Envio Ordem BCM, Emissão do Contrato, Crédito não aprovado e status Concluído se o campo “Score de Crédito Cliente” não estiver preenchido</description>
    <errorConditionFormula>AND
(
RecordType.DeveloperName = &quot;FibraRural&quot;,
NOT ISNEW(),
ISBLANK(CustomerCreditScore__c),
OR
(
ISPICKVAL(Status,&apos;FinishedFR&apos;),
ISPICKVAL(SubStatus__c,&apos;TicketIssuanceFR&apos;),
ISPICKVAL(SubStatus__c,&apos;WaitingPaymentFR&apos;),
ISPICKVAL(SubStatus__c,&apos;BCMOrderShippingFR&apos;),
ISPICKVAL(SubStatus__c,&apos;IssuanceOfTheContractFR&apos;),
ISPICKVAL(SubStatusDetail__c,&apos;UnapprovedCreditFR&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>CustomerCreditScore__c</errorDisplayField>
    <errorMessage>Para avançar para os Sub Status &apos;Emissão do Boleto&apos; ou &apos;Aguardando Baixa Pagamento&apos; ou &apos;Envio Ordem BCM&apos; ou &apos;Emissão do Contrato&apos; ou &apos;Crédito não aprovado&apos; ou Status &apos;Concluído&apos; é necessário informar o campo &apos; Score de Crédito Cliente&apos;!</errorMessage>
</ValidationRule>