force-app/main/default/objects/Lead/validationRules/VerificationMandatoryFieldFilling.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationMandatoryFieldFilling</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(NOT(RecordType.DeveloperName  = &quot;FibraRural&quot;),
OR(
ISBLANK(Document__c),
ISBLANK(FirstName),
ISBLANK(LastName),
ISBLANK(MobilePhone)
))</errorConditionFormula>
    <errorMessage>Favor preencher os campos obrigatórios para seguir!</errorMessage>
</ValidationRule>