force-app/main/default/objects/Lead/validationRules/VerificationMandatoryFieldFillingFibraRu.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationMandatoryFieldFillingFibraRu</fullName>
    <active>true</active>
    <description>Valida campos obrigatórios do Lead para o cenário de Fibra Rural</description>
    <errorConditionFormula>AND
(
 RecordType.DeveloperName = &quot;FibraRural&quot;,
 OR(
 ISBLANK(FirstName),
 ISBLANK(Street),
 ISBLANK(City),
 ISBLANK(State ),
 ISBLANK(PostalCode),
 ISBLANK(Country)
    )
)</errorConditionFormula>
    <errorMessage>Verifique se informou o primeiro nome e o endereço completo do Lead</errorMessage>
</ValidationRule>