force-app/main/default/objects/Lead/validationRules/VerificationMandatorySalesIdNext.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationMandatorySalesIdNext</fullName>
    <active>true</active>
    <description>Verifica se foi informado o &apos;ID da Venda no Next&apos; em caso de Conclusão do Lead</description>
    <errorConditionFormula>AND
(
RecordType.DeveloperName = &quot;FibraRural&quot;,
NOT ISNEW(),
ISBLANK( SalesIdNext__c ),
ISPICKVAL(Status,&apos;FinishedFR&apos;)

)</errorConditionFormula>
    <errorDisplayField>SalesIdNext__c</errorDisplayField>
    <errorMessage>Para &apos;Concluir&apos; o Lead é necessário informar o campo &apos;ID da Venda no Next&apos;!</errorMessage>
</ValidationRule>