force-app/main/default/objects/Lead/validationRules/VerificationStatusCreateFibraRural.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationStatusCreateFibraRural</fullName>
    <active>true</active>
    <description>Valida se o status do Lead está correto para Fibra Rural, deve-se criar com o status &quot;Novo&quot;</description>
    <errorConditionFormula>AND
(
 RecordType.DeveloperName = &quot;FibraRural&quot;,
 ISNEW(),
 NOT (ISPICKVAL( Status , &quot;NewFR&quot;))
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Utilize o status &apos;Novo&apos; ao criar um Lead para o cenário de Fibra Rural</errorMessage>
</ValidationRule>