force-app/main/default/objects/Lead/validationRules/VerificationValueCPFFibraRural.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationValueCPFFibraRural</fullName>
    <active>true</active>
    <description>Valida o dígito verificador do CPF</description>
    <errorConditionFormula>AND
(
RecordType.DeveloperName = &quot;FibraRural&quot;,

NOT(
OR(
LEN(Document__c)=0,AND(MOD(MOD(11-MOD(
VALUE(MID(Document__c,1,1))*10+
VALUE(MID(Document__c,2,1))*9+
VALUE(MID(Document__c,3,1))*8+
VALUE(MID(Document__c,5,1))*7+
VALUE(MID(Document__c,6,1))*6+
VALUE(MID(Document__c,7,1))*5+
VALUE(MID(Document__c,9,1))*4+
VALUE(MID(Document__c,10,1))*3+
VALUE(MID(Document__c,11,1))*2,11),11),10)=
VALUE(MID(Document__c,13,1)),MOD(MOD(11-MOD(
VALUE(MID(Document__c,1,1))*11+
VALUE(MID(Document__c,2,1))*10+
VALUE(MID(Document__c,3,1))*9+
VALUE(MID(Document__c,5,1))*8+
VALUE(MID(Document__c,6,1))*7+
VALUE(MID(Document__c,7,1))*6+
VALUE(MID(Document__c,9,1))*5+
VALUE(MID(Document__c,10,1))*4+
VALUE(MID(Document__c,11,1))*3+
VALUE(MID(Document__c,13,1))*2,11),11),10)=
VALUE(MID(Document__c,14,1))))) &amp;&amp; NOT(OR(LEN(Document__c)=0,AND(MOD(MOD(11-MOD(
VALUE(MID(Document__c,1,1))*10+
VALUE(MID(Document__c,2,1))*9+
VALUE(MID(Document__c,3,1))*8+
VALUE(MID(Document__c,4,1))*7+
VALUE(MID(Document__c,5,1))*6+
VALUE(MID(Document__c,6,1))*5+
VALUE(MID(Document__c,7,1))*4+
VALUE(MID(Document__c,8,1))*3+
VALUE(MID(Document__c,9,1))*2,11),11),10)=
VALUE(MID(Document__c,10,1)),MOD(MOD(11-MOD(
VALUE(MID(Document__c,1,1))*11+
VALUE(MID(Document__c,2,1))*10+
VALUE(MID(Document__c,3,1))*9+
VALUE(MID(Document__c,4,1))*8+
VALUE(MID(Document__c,5,1))*7+
VALUE(MID(Document__c,6,1))*6+
VALUE(MID(Document__c,7,1))*5+
VALUE(MID(Document__c,8,1))*4+
VALUE(MID(Document__c,9,1))*3+
VALUE(MID(Document__c,10,1))*2,11),11),10)=
VALUE(MID(Document__c,11,1)))))
)</errorConditionFormula>
    <errorDisplayField>Document__c</errorDisplayField>
    <errorMessage>O CPF informado não é válido!</errorMessage>
</ValidationRule>