force-app/main/default/objects/Lead/validationRules/VerificationValueSeqCPFFibraRural.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationValueSeqCPFFibraRural</fullName>
    <active>true</active>
    <description>Valida números sequenciais informados no campo CPF</description>
    <errorConditionFormula>AND
(
RecordType.DeveloperName = &quot;FibraRural&quot;,
OR (
Document__c  = &quot;00000000000&quot;,
Document__c  = &quot;11111111111&quot;,
Document__c  = &quot;22222222222&quot;,
Document__c  = &quot;33333333333&quot;,
Document__c  = &quot;44444444444&quot;,
Document__c  = &quot;55555555555&quot;,
Document__c  = &quot;66666666666&quot;,
Document__c  = &quot;77777777777&quot;,
Document__c  = &quot;88888888888&quot;,
Document__c  = &quot;99999999999&quot;
)
)</errorConditionFormula>
    <errorDisplayField>Document__c</errorDisplayField>
    <errorMessage>O CPF informado não é válido!</errorMessage>
</ValidationRule>