force-app/main/default/objects/Lead/listViews/LLPP.listView-meta.xml
<ListView>
    <fullName>LLPP</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Document__c</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>SalesType__c</columns>
    <columns>InterestedProducts__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Leads</value>
    </filters>
    <filters>
        <field>SourceChannel__c</field>
        <operation>equals</operation>
        <value>Ilha Comercial Lojas</value>
    </filters>
    <filters>
        <field>SourceChannel__c</field>
        <operation>equals</operation>
        <value>Operador Lojas</value>
    </filters>
    <label>LLPP</label>
</ListView>