force-app/main/default/objects/Lead/listViews/PAP.listView-meta.xml
<ListView>
    <fullName>PAP</fullName>
    <columns>FULL_NAME</columns>
    <columns>Document__c</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>SalesType__c</columns>
    <columns>InterestedProducts__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Leads</value>
    </filters>
    <label>PAP</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
        <roleAndSubordinatesInternal>Omnichannel</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>