force-app/main/default/objects/Lead/listViews/PersonalV.listView-meta.xml
<ListView>
    <fullName>PersonalV</fullName>
    <booleanFilter>1 AND (2 OR  3 OR  4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Document__c</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>SalesType__c</columns>
    <columns>InterestedProducts__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Leads</value>
    </filters>
    <filters>
        <field>SourceChannel__c</field>
        <operation>equals</operation>
        <value>Ilha Personal V</value>
    </filters>
    <filters>
        <field>SourceChannel__c</field>
        <operation>equals</operation>
        <value>Operador Personal V</value>
    </filters>
    <filters>
        <field>SourceChannel__c</field>
        <operation>equals</operation>
        <value>Ilha Processos Personal V</value>
    </filters>
    <label>Personal V</label>
</ListView>